Fix match page white space

--- a/fives/static/fives/main.css
+++ b/fives/static/fives/main.css
@@ -34,7 +34,7 @@
 }
 
 .h2h h3{
-  text-indent: 150px;
+  text-align: center;
 }
 
 .h2h table, th{
